CLOUDP-46342: Update OM versions in Evergreen file (#317)